fix: revert of 50883-minimal-jre-via-jlink